--- a/app/src/main/res/layout/activity_new_game.xml
+++ b/app/src/main/res/layout/activity_new_game.xml
@@ -5,7 +5,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
+    android:background="@drawable/space">
     tools:context="com.solaldussout_revel.mastermind.NewGameActivity">
+
 
 
     <include layout="@layout/content_new_game" />
