--- a/app/src/main/res/layout/content_new_game.xml
+++ b/app/src/main/res/layout/content_new_game.xml
@@ -13,31 +13,52 @@
     tools:context="com.solaldussout_revel.mastermind.NewGameActivity"
     tools:showIn="@layout/activity_new_game">
 
-    <TextView
+    <com.solaldussout_revel.mastermind.widget.RobotoTextView
         android:text="Mastermind"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="66dp"
-        android:layout_alignBottom="@+id/newGameButton"
+        android:layout_marginTop="32dp"
+        android:id="@+id/textView"
+        android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:fontFamily="sans-serif" />
+        android:textSize="48sp"
+        android:letterSpacing=".2"
+        app:font="Roboto-Thin.ttf"
+        android:textColor="#EEEEEE" />
 
     <Button
-        android:text="Jouer !"
+        android:text="Jouer"
+        android:id="@+id/newGameButton"
+        android:textSize="24sp"
+        android:textAllCaps="true"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true"
+        android:typeface="monospace"
+        android:textAlignment="center"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/newGameButton"
-        android:layout_marginTop="223dp"
-        android:layout_alignParentTop="true"
+        android:background="#EEEEEE"
+        android:textColor="#333333"
+        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+        android:lineSpacingExtra="14sp"
+        android:lineSpacingMultiplier="999"
+        android:paddingTop="15dp"
+        android:paddingBottom="15dp"
+        android:letterSpacing=".3"
+        android:paddingLeft="50dp"
+        android:paddingRight="50dp" />
+
+    <Button
+        android:text="Règles du Jeu"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/button"
+        style="@style/Widget.AppCompat.Button.Borderless"
+        android:textSize="18sp"
+        android:fontFamily="monospace"
+        android:textAllCaps="false"
+        android:textColor="#777777"
+        android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true" />
 
-    <Button
-        android:text="Rules"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignLeft="@+id/newGameButton"
-        android:layout_alignStart="@+id/newGameButton"
-        android:layout_marginBottom="15dp"
-        android:id="@+id/button" />
 </RelativeLayout>
