--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -5,20 +5,21 @@
     android:id="@+id/content_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.solaldussout_revel.mastermind.MainActivity"
-    tools:showIn="@layout/activity_main">
+    tools:showIn="@layout/activity_main"
+    android:elevation="1dp">
 
     <TableLayout
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_width="match_parent"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true">
+        android:layout_alignParentStart="true"
+        android:focusable="true"
+        android:focusableInTouchMode="true"
+        android:id="@+id/tableScore">
 
         <TableRow
             android:layout_width="match_parent"
@@ -52,5 +53,94 @@
 
         </TableRow>
     </TableLayout>
+
+
+    <GridLayout
+        android:layout_width="match_parent"
+        android:orientation="horizontal"
+        android:layout_alignParentBottom="false"
+        android:layout_alignBottom="@+id/barSelect"
+        android:background="#DDD"
+        android:id="@+id/gridColor"
+        android:layout_height="60dp">
+        <TextView
+            android:id="@+id/color1"
+            android:background="@color/color1"
+            style="@style/colorCircle"/>
+        <TextView
+            android:id="@+id/color2"
+            android:background="@color/color2"
+            style="@style/colorCircle"/>
+        <TextView
+            android:id="@+id/color3"
+            android:background="@color/color3"
+            style="@style/colorCircle"/>
+        <TextView
+            android:id="@+id/color4"
+            android:background="@color/color4"
+            style="@style/colorCircle"/>
+        <TextView
+            android:id="@+id/color5"
+            android:background="@color/color5"
+            style="@style/colorCircle"/>
+        <TextView
+            android:id="@+id/color6"
+            android:background="@color/color6"
+            style="@style/colorCircle"/>
+        <TextView
+            android:id="@+id/color7"
+            android:background="@color/color7"
+            style="@style/colorCircle"/>
+        <TextView
+            android:id="@+id/color8"
+            android:background="@color/color8"
+            style="@style/colorCircle"/>
+
+    </GridLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:background="#DDD"
+        android:layout_height="60dp"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:id="@+id/barSelect"
+        android:rotationX="1.0">
+
+        <TextView
+            android:id="@+id/color1Button"
+            style="@style/colorCircle"
+            android:focusableInTouchMode="true"
+            android:focusable="true"
+            android:layout_marginLeft="40dp" />
+
+        <TextView
+            android:id="@+id/color2Button"
+            android:focusableInTouchMode="true"
+            android:focusable="true"
+            style="@style/colorCircle"/>
+
+        <TextView
+            android:id="@+id/color3Button"
+            android:focusableInTouchMode="true"
+            android:focusable="true"
+            style="@style/colorCircle"/>
+
+        <TextView
+            android:id="@+id/color4Button"
+            android:focusableInTouchMode="true"
+            android:focusable="true"
+            style="@style/colorCircle" />
+
+        <Button
+            android:text="Validez"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:id="@+id/button"
+            android:layout_marginTop="7dp"
+            android:layout_marginLeft="40dp" />
+    </LinearLayout>
 
 </RelativeLayout>
