--- a/app/src/main/res/layout/colors_circle.xml
+++ b/app/src/main/res/layout/colors_circle.xml
@@ -1,4 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
-style="@style/colorCircle" />
-
+    android:layout_width="20dp"
+    android:layout_height="20dp"
+    android:layout_marginLeft="9dp"
+    android:layout_marginRight="9dp"
+    android:layout_marginTop="10dp"
+    android:layout_marginBottom="10dp"
+    android:background="#000000"
+    android:rotation="45"
+    android:layout_weight="0" />
