--- a/app/src/main/res/layout/table_row_layout.xml
+++ b/app/src/main/res/layout/table_row_layout.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <TableRow xmlns:android="http://schemas.android.com/apk/res/android"
+    android:gravity="center"
     android:layout_width="match_parent" android:layout_height="match_parent">
     <TextView xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/square1"
@@ -13,4 +14,37 @@
     <TextView xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/square4"
         style="@style/colorCircle"/>
+
+    <RelativeLayout
+        android:layout_width="20dp"
+        android:layout_height="20dp"
+        android:rotation="45"
+        android:background="@android:color/holo_red_dark"
+        android:gravity="center_vertical|center_horizontal"
+        android:layout_marginLeft="30dp">
+
+        <TextView
+            android:text=""
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/goodPlace"
+            android:textColor="#FFFFFFFF"
+            android:rotation="-45" />
+    </RelativeLayout>
+    <RelativeLayout
+        android:layout_width="20dp"
+        android:layout_height="20dp"
+        android:rotation="45"
+        android:background="@color/grey"
+        android:gravity="center_vertical|center_horizontal"
+        android:layout_marginLeft="15dp">
+
+        <TextView
+            android:text=""
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/badPlace"
+            android:textColor="#FFFFFFFF"
+            android:rotation="-45" />
+    </RelativeLayout>
 </TableRow>
