--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -24,7 +24,7 @@
         <item name="android:layout_marginRight">9dp</item>
         <item name="android:layout_marginTop">10dp</item>
         <item name="android:layout_marginBottom">10dp</item>
-        <item name="android:background">#CCCCCC</item>
+        <item name="android:background">#ffcccccc</item>
         <item name="android:rotation">45</item>
     </style>
 
