--- a/app/src/main/res/layout/content_new_game.xml
+++ b/app/src/main/res/layout/content_new_game.xml
@@ -52,7 +52,7 @@
         android:text="Règles du Jeu"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/button"
+        android:id="@+id/RulesButton"
         style="@style/Widget.AppCompat.Button.Borderless"
         android:textSize="18sp"
         android:fontFamily="monospace"
