Create parent Menu

--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -162,7 +162,7 @@
             android:layout_height="match_parent">
 
             <Button
-                android:text="Validez score"
+                android:text="Validez"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_alignParentRight="true"
