--- a/app/src/main/res/layout/menu_layout.xml
+++ b/app/src/main/res/layout/menu_layout.xml
@@ -10,8 +10,8 @@
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar"
-        android:layout_width="50dp"
-        android:layout_height="?attr/actionBarSize"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:background="@android:color/transparent"
         android:layout_weight="1"
         app:popupTheme="@android:drawable/ic_menu_add" />
