--- a/app/src/main/res/layout/content_new_game.xml
+++ b/app/src/main/res/layout/content_new_game.xml
@@ -14,7 +14,7 @@
     tools:showIn="@layout/activity_new_game">
 
     <com.solaldussout_revel.mastermind.widget.RobotoTextView
-        android:text="Mastermind"
+        android:text="@string/app_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
