Main button style update

--- a/app/src/main/res/layout/content_new_game.xml
+++ b/app/src/main/res/layout/content_new_game.xml
@@ -29,7 +29,7 @@
     <Button
         android:text="Jouer"
         android:id="@+id/newGameButton"
-        android:textSize="24sp"
+        android:textSize="28sp"
         android:textAllCaps="true"
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true"
@@ -37,8 +37,8 @@
         android:textAlignment="center"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="#EEEEEE"
-        android:textColor="#333333"
+        android:background="@drawable/my_button_bg"
+        android:textColor="#FFFFFF"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
         android:lineSpacingExtra="14sp"
         android:lineSpacingMultiplier="999"
