--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -8,7 +8,6 @@
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.solaldussout_revel.mastermind.GameActivity"
     tools:showIn="@layout/activity_main"
-    android:elevation="1dp"
     android:background="@drawable/space">
 
 
@@ -25,7 +24,7 @@
         android:layout_alignParentStart="true" />
 
     <TextView
-        android:text="TextView"
+        android:text=""
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/chrono"
@@ -45,7 +44,7 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:orientation="vertical"
             android:paddingRight="30dp"
             android:paddingLeft="30dp">
@@ -53,9 +52,6 @@
             <TableLayout
                 android:layout_height="match_parent"
                 android:layout_width="match_parent"
-                android:layout_alignParentTop="true"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true"
                 android:focusable="true"
                 android:focusableInTouchMode="true"
                 android:id="@+id/tableScore"
@@ -121,8 +117,7 @@
         android:layout_height="60dp"
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:elevation="8dp">
+        android:layout_alignParentStart="true">
 
         <TextView
             android:id="@+id/color1Button"
@@ -166,13 +161,13 @@
             android:layout_height="match_parent">
 
             <Button
-                android:text="Validez"
+                android:text="@string/validAction"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_alignParentRight="true"
                 android:id="@+id/validScoreButton"
                 android:hapticFeedbackEnabled="true"
-                android:layout_gravity="right|center_vertical"
+                android:layout_gravity="end|center_vertical"
                 android:paddingLeft="15dp"
                 android:paddingRight="15dp"
                 android:background="@android:color/white" />
