--- a/app/src/main/res/layout/content_rules.xml
+++ b/app/src/main/res/layout/content_rules.xml
@@ -22,15 +22,13 @@
         <LinearLayout
             android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="wrap_content">
 
             <com.solaldussout_revel.mastermind.widget.RobotoTextView
-                android:text="Règles du jeu"
+                android:text="@string/rulesLabel"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/textView"
-                android:layout_alignParentTop="true"
-                android:layout_centerHorizontal="true"
                 android:textSize="36sp"
                 android:letterSpacing=".2"
                 app:font="Roboto-Thin.ttf"
@@ -38,16 +36,9 @@
                 android:gravity="center" />
 
             <com.solaldussout_revel.mastermind.widget.RobotoTextView
-                android:text="\nVenez découvrir l’un des plus célèbres jeux de logique !
-        \n\nLe but du jeu du Mastermind est de deviner en un minimum de coup la combinaison aléatoire générée par le jeu.
-        \n\nChaque tours de jeux consiste à la création d’une série de 4 pions, dont vous définirez de chacun la couleur dans un choix de 8 couleur différentes. Composez donc votre combinaison en appuyant tours a tours sur chacun de vos 4 pions puis choisissez une couleur. Enfin, appuyez sur validé pour comparer votre combinaison à celle recherché.
-        \n\nPour vous aider, deux types d’information :
-        \n\nLe nombre de pions bien placées et de la bonne couleur dans votre combinaison, représentés par le losange de couleur rouge.
-        \nLe nombre de pions mal placées mais de la bonne couleur dans votre combinaison, représentés par le losange de couleur grise.
-        \n\nSi vous êtes sûr de l’une de vos couleurs, vous pouvez la verrouiller grâce au petit cadenas à droite de la barre couleurs, cela permettra de garder en mémoire les couleurs que vous ne voulez plus changer."
+                android:text="@string/contentRule"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:id="@+id/textView"
                 android:layout_alignParentTop="true"
                 android:layout_centerHorizontal="true"
                 android:letterSpacing=".2"
