--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -171,6 +171,19 @@
                 android:paddingLeft="15dp"
                 android:paddingRight="15dp"
                 android:background="@android:color/white" />
+
+            <ImageButton
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:srcCompat="@drawable/lockopen"
+                android:layout_marginRight="52dp"
+                android:layout_marginEnd="52dp"
+                android:id="@+id/LockButton"
+                android:background="#00000000"
+                android:layout_centerVertical="true"
+                android:layout_toLeftOf="@+id/validScoreButton"
+                android:layout_toStartOf="@+id/validScoreButton" />
+
         </RelativeLayout>
 
     </LinearLayout>
